fixed alignment

--- a/css/resume.css
+++ b/css/resume.css
@@ -98,4 +98,7 @@ section:last-child {
 .links {
     display: none;
 }
+section {
+    grid-template-columns: 1fr 80%;
+}
 }
